# infosafe

./: LICENSE  README.md  pyproject.toml  setup.py
infosafe/: __init__.py  math.py
