[project]
name = "infosafe"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "quanfun", email = "qumint@foxmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pytest-runner>=6.0.1",
    "wheel>=0.43.0",
    "setuptools>=69.5.1",
    "twine>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/infosafe"]
